<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_background_color">


    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">-->
    <include
        android:id="@+id/dropdown_list"
        layout="@layout/artifact_backdrop_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!--</LinearLayout>-->


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/appBar"
            style="@style/toolbarStyle"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:paddingStart="12dp"
            android:paddingLeft="12dp"
            android:paddingEnd="12dp"
            android:paddingRight="12dp"
            app:contentInsetStart="0dp"
            app:navigationIcon="@drawable/ic_menu"
            app:title="@string/app_name">

            <ImageButton
                android:id="@+id/btn_settings"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="end"
                android:layout_marginHorizontal="10dp"
                android:backgroundTint="#201e21"
                android:elevation="0dp"
                android:src="@drawable/ic_setting"
                app:tint="#f0c47b" />

            <ImageButton
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_gravity="end"
                android:backgroundTint="#201e21"
                android:src="@drawable/ic_search"
                app:tint="#f0c47b" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/scrollview_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/app_bar_divider"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:backgroundTint="@color/app_bar_divider_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/image_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:src="@drawable/nefertiti_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_bar_divider" />


        <androidx.cardview.widget.CardView
            android:id="@+id/text_container_cardView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/_27sdp"
            android:layout_marginTop="@dimen/_150sdp"
            app:cardCornerRadius="@dimen/_13sdp"
            android:elevation="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar_divider"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@color/brief_text_back_color"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/text_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/nanum_myeongjo_regular"
                    android:text="@string/nefertiti"
                    android:textColor="#f0c47b"
                    android:textSize="26sp"
                    android:textStyle="bold" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="80dp"
                    android:layout_height="3dp"
                    android:layout_marginVertical="10dp" />


                <androidx.core.widget.NestedScrollView
                    android:scrollbars="none"
                    android:id="@+id/scrollview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/brief_text_back_color"
                    android:elevation="10dp"
                    android:paddingTop="@dimen/_10sdp">

                    <TextView
                        android:id="@+id/details_body"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nanum_myeongjo_regular"
                        android:paddingHorizontal="15dp"
                        android:text="@string/akhenaten_history"
                        android:textAlignment="viewStart"
                        android:textColor="#F8F0EB"
                        android:textSize="20sp" />
                </androidx.core.widget.NestedScrollView>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--<com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="#f0c47b"
        android:elevation="12dp"
        android:src="@drawable/ic_robot"
        android:tint="@color/home_background_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />-->

</androidx.constraintlayout.widget.ConstraintLayout>